# guesstimator

./: .gitignore  Cargo.toml  Dockerfile  notes.txt  package-lock.json  package.json  tailwind.config.js  webpack.config.js
phi-client/: Cargo.toml  package.json  tailwind.config.js  webpack.config.js
phi-client/src/: app.rs  lib.rs  player_cards.rs
phi-client/src/agents/: store.rs
phi-client/static/: index.html
phi-common/: Cargo.toml
phi-common/src/: lib.rs
phi-react/: .gitignore  .graphqlconfig  .prettierignore  apollo.config.js  apollo.config.offline.js  package-lock.json  package.json  schema.graphql  tailwind.config.js
phi-react/public/: index.html
phi-react/src/: App.tsx  CardPicker.tsx  NameSetter.tsx  PlayerCards.tsx  index.css  index.tsx  setupProxy.js
phi-react/src/styles/: main.css
phi-server/: Cargo.toml
phi-server/src/: cli.rs  commands.rs  gql.rs  main.rs  play_session.rs  poker.rs  socket.rs
phi-server/src/gql/: mod.rs  model.rs
src/: app.rs  lib.rs  player_cards.rs  text_edit.rs
src/agents/: store.rs
static/: index.html  style.css  style.scss
