[package]
name = "phi-client"
version = "0.1.0"
authors = ["Owen Nelson <onelson@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
strum = "0.17"
strum_macros = "0.17"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
yew = "0.17"
yewtil = "0.3"

[dependencies.phi-common]
path = "../phi-common"
features = ["wasm"]

[dependencies.web-sys]
version = "0.3.4"
features = [
    "Location",
    "UrlSearchParams",
    "Window",
]


[dev-dependencies]
wasm-bindgen-test = "0.3"
