[package]
name = "phi-common"
version = "0.1.0"
authors = ["Owen Nelson <onelson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
actix = { version = "0.10", optional = true }
async-graphql = { version = "2.0", features = ["uuid"], optional = true}

[features]
default = []
wasm = ["uuid/wasm-bindgen"]
