[package]
name = "phi-server"
version = "0.1.0"
authors = ["Owen Nelson <onelson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1"
actix-web-actors = "3.0"
actix-files = "0.4"
serde_json = "1.0"
log = "0.4"
dotenv = "0.15"
env_logger = "0.7"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
async-graphql = { version = "2.0", features = ["uuid"] }
async-graphql-actix-web = "2.0"

[dependencies.tokio]
version = "0.3"
features = ["stream", "sync"]

[dependencies.phi-common]
path = "../phi-common"
