[package]
name = "phi-server"
version = "0.1.0"
authors = ["Owen Nelson <onelson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "3.0.27", features = ["uuid"] }
async-graphql-warp = "3.0.27"
dotenv = "0.15"
env_logger = "0.8"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = { version = "0.1.8", features = ["sync"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = "0.3"

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]
