[package]
name = "phi-server"
version = "0.1.0"
authors = ["Owen Nelson <onelson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.0-beta.16"
actix-rt = "2.6.0"
actix-session = "0.5.0-beta.8"
actix-web = "4.0.0-rc.3"
async-graphql = { version = "3.0.29", features = ["uuid"] }
async-graphql-actix-web = "3.0.29"
dotenv = "0.15"
env_logger = "0.8"
include_dir = { version = "0.7.2", optional = true }
log = "0.4"
mime = { version = "0.3.16", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3.26"
tokio = "1"
tokio-stream = { version = "0.1.8", features = ["sync"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

[features]
default = []
baked = ["include_dir", "mime"]
